// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pages > CreateDisruption > should render correctly for operator user with inputs and without errors 1`] = `
<DocumentFragment>
  <div
    class="app-phase-banner__wrapper"
  >
    <div
      class="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        class="govuk-phase-banner__content"
      >
        <strong
          class="govuk-tag govuk-phase-banner__content__tag"
        >
          Beta
        </strong>
        <span
          class="govuk-phase-banner__text"
        >
          This is a new service – your 
          <a
            class="govuk-link"
            href="/feedback"
            id="feedback-link"
          >
            feedback
          </a>
           will help us to improve it.
        </span>
      </p>
    </div>
  </div>
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-two-thirds"
        >
          <form
            action="/api/type-of-consequence"
            method="post"
          >
            <input
              name="csrf_token"
              type="hidden"
              value=""
            />
            <div
              class="govuk-form-group"
            >
              <h1
                class="govuk-heading-xl"
              >
                Add a consequence
              </h1>
              <div
                class="govuk-form-group"
              >
                <fieldset
                  class="govuk-fieldset"
                  id="consequence-type"
                >
                  <legend
                    class="govuk-fieldset__legend govuk-!-padding-top-3"
                  >
                    <span
                      class="govuk-heading-s govuk-!-margin-bottom-0"
                    >
                      Select consequence type
                    </span>
                  </legend>
                  <div
                    class=""
                  >
                    <div
                      class="govuk-radios"
                      data-module="govuk-radios"
                    >
                      <div
                        class="govuk-radios__item govuk-!-margin-bottom-1"
                      >
                        <input
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-services-conditional"
                          id="consequence-type-services"
                          name="consequenceType"
                          type="radio"
                          value="services"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-services"
                        >
                          Services
                        </label>
                      </div>
                      <div
                        class="govuk-radios__item"
                      >
                        <input
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-operatorWide-conditional"
                          id="consequence-type-operatorWide"
                          name="consequenceType"
                          type="radio"
                          value="operatorWide"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-operatorWide"
                        >
                          Operator wide
                        </label>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
              <input
                name="disruptionId"
                type="hidden"
                value=""
              />
              <input
                name="consequenceIndex"
                type="hidden"
                value=""
              />
              <div
                class="govuk-button-group"
              >
                <button
                  class="govuk-button"
                  data-module="govuk-button"
                >
                  Save and continue
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`pages > CreateDisruption > should render correctly if cancellations feature flag is set to true 1`] = `
<DocumentFragment>
  <div
    class="app-phase-banner__wrapper"
  >
    <div
      class="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        class="govuk-phase-banner__content"
      >
        <strong
          class="govuk-tag govuk-phase-banner__content__tag"
        >
          Beta
        </strong>
        <span
          class="govuk-phase-banner__text"
        >
          This is a new service – your 
          <a
            class="govuk-link"
            href="/feedback"
            id="feedback-link"
          >
            feedback
          </a>
           will help us to improve it.
        </span>
      </p>
    </div>
  </div>
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-two-thirds"
        >
          <form
            action="/api/type-of-consequence"
            method="post"
          >
            <input
              name="csrf_token"
              type="hidden"
              value=""
            />
            <div
              class="govuk-form-group"
            >
              <h1
                class="govuk-heading-xl"
              >
                Add a consequence
              </h1>
              <div
                class="govuk-form-group"
              >
                <fieldset
                  class="govuk-fieldset"
                  id="consequence-type"
                >
                  <legend
                    class="govuk-fieldset__legend govuk-!-padding-top-3"
                  >
                    <span
                      class="govuk-heading-s govuk-!-margin-bottom-0"
                    >
                      Select consequence type
                    </span>
                  </legend>
                  <div
                    class=""
                  >
                    <div
                      class="govuk-radios"
                      data-module="govuk-radios"
                    >
                      <div
                        class="govuk-radios__item govuk-!-margin-bottom-1"
                      >
                        <input
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-services-conditional"
                          id="consequence-type-services"
                          name="consequenceType"
                          type="radio"
                          value="services"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-services"
                        >
                          Services
                        </label>
                      </div>
                      <div
                        class="govuk-radios__item govuk-!-margin-bottom-1"
                      >
                        <input
                          checked=""
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-networkWide-conditional"
                          id="consequence-type-networkWide"
                          name="consequenceType"
                          type="radio"
                          value="networkWide"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-networkWide"
                        >
                          Network wide
                        </label>
                      </div>
                      <div
                        class="govuk-radios__item govuk-!-margin-bottom-1"
                      >
                        <input
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-operatorWide-conditional"
                          id="consequence-type-operatorWide"
                          name="consequenceType"
                          type="radio"
                          value="operatorWide"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-operatorWide"
                        >
                          Operator wide
                        </label>
                      </div>
                      <div
                        class="govuk-radios__item govuk-!-margin-bottom-1"
                      >
                        <input
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-stops-conditional"
                          id="consequence-type-stops"
                          name="consequenceType"
                          type="radio"
                          value="stops"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-stops"
                        >
                          Stops
                        </label>
                      </div>
                      <div
                        class="govuk-radios__item"
                      >
                        <input
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-journeys-conditional"
                          id="consequence-type-journeys"
                          name="consequenceType"
                          type="radio"
                          value="journeys"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-journeys"
                        >
                          Journeys
                        </label>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
              <input
                name="disruptionId"
                type="hidden"
                value=""
              />
              <input
                name="consequenceIndex"
                type="hidden"
                value=""
              />
              <div
                class="govuk-button-group"
              >
                <button
                  class="govuk-button"
                  data-module="govuk-button"
                >
                  Save and continue
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`pages > CreateDisruption > should render correctly with inputs and with errors 1`] = `
<DocumentFragment>
  <div
    class="app-phase-banner__wrapper"
  >
    <div
      class="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        class="govuk-phase-banner__content"
      >
        <strong
          class="govuk-tag govuk-phase-banner__content__tag"
        >
          Beta
        </strong>
        <span
          class="govuk-phase-banner__text"
        >
          This is a new service – your 
          <a
            class="govuk-link"
            href="/feedback"
            id="feedback-link"
          >
            feedback
          </a>
           will help us to improve it.
        </span>
      </p>
    </div>
  </div>
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-two-thirds"
        >
          <form
            action="/api/type-of-consequence"
            method="post"
          >
            <input
              name="csrf_token"
              type="hidden"
              value=""
            />
            <div
              aria-labelledby="error-summary-title"
              class="govuk-error-summary"
              data-module="govuk-error-summary"
              role="alert"
              tabindex="-1"
            >
              <h2
                class="govuk-error-summary__title"
                id="error-summary-title"
              >
                There is a problem
              </h2>
              <div
                class="govuk-error-summary__body"
              >
                <ul
                  class="govuk-list govuk-error-summary__list"
                >
                  <li>
                    <a
                      href="#consequence-type"
                    >
                      Select a consequence type
                    </a>
                  </li>
                  <li>
                    <a
                      href="#vehicle-mode"
                    >
                      Select a mode of transport
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="govuk-form-group"
            >
              <h1
                class="govuk-heading-xl"
              >
                Add a consequence
              </h1>
              <div
                class="govuk-form-group govuk-form-group--error"
              >
                <fieldset
                  class="govuk-fieldset"
                  id="consequence-type"
                >
                  <legend
                    class="govuk-fieldset__legend govuk-!-padding-top-3"
                  >
                    <span
                      class="govuk-heading-s govuk-!-margin-bottom-0"
                    >
                      Select consequence type
                    </span>
                  </legend>
                  <div
                    class=""
                  >
                    <span
                      class="govuk-error-message"
                      id="consequenceType-error"
                    >
                      <span
                        class="govuk-visually-hidden"
                      >
                        Error: 
                      </span>
                      Select a consequence type
                    </span>
                    <div
                      aria-describedby="consequenceType-error"
                      class="govuk-radios govuk-radios--error"
                      data-module="govuk-radios"
                    >
                      <div
                        class="govuk-radios__item govuk-!-margin-bottom-1"
                      >
                        <input
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-services-conditional"
                          id="consequence-type-services"
                          name="consequenceType"
                          type="radio"
                          value="services"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-services"
                        >
                          Services
                        </label>
                      </div>
                      <div
                        class="govuk-radios__item govuk-!-margin-bottom-1"
                      >
                        <input
                          checked=""
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-networkWide-conditional"
                          id="consequence-type-networkWide"
                          name="consequenceType"
                          type="radio"
                          value="networkWide"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-networkWide"
                        >
                          Network wide
                        </label>
                      </div>
                      <div
                        class="govuk-radios__item govuk-!-margin-bottom-1"
                      >
                        <input
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-operatorWide-conditional"
                          id="consequence-type-operatorWide"
                          name="consequenceType"
                          type="radio"
                          value="operatorWide"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-operatorWide"
                        >
                          Operator wide
                        </label>
                      </div>
                      <div
                        class="govuk-radios__item"
                      >
                        <input
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-stops-conditional"
                          id="consequence-type-stops"
                          name="consequenceType"
                          type="radio"
                          value="stops"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-stops"
                        >
                          Stops
                        </label>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
              <input
                name="disruptionId"
                type="hidden"
                value=""
              />
              <input
                name="consequenceIndex"
                type="hidden"
                value=""
              />
              <div
                class="govuk-button-group"
              >
                <button
                  class="govuk-button"
                  data-module="govuk-button"
                >
                  Save and continue
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`pages > CreateDisruption > should render correctly with inputs and without errors 1`] = `
<DocumentFragment>
  <div
    class="app-phase-banner__wrapper"
  >
    <div
      class="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        class="govuk-phase-banner__content"
      >
        <strong
          class="govuk-tag govuk-phase-banner__content__tag"
        >
          Beta
        </strong>
        <span
          class="govuk-phase-banner__text"
        >
          This is a new service – your 
          <a
            class="govuk-link"
            href="/feedback"
            id="feedback-link"
          >
            feedback
          </a>
           will help us to improve it.
        </span>
      </p>
    </div>
  </div>
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-two-thirds"
        >
          <form
            action="/api/type-of-consequence"
            method="post"
          >
            <input
              name="csrf_token"
              type="hidden"
              value=""
            />
            <div
              class="govuk-form-group"
            >
              <h1
                class="govuk-heading-xl"
              >
                Add a consequence
              </h1>
              <div
                class="govuk-form-group"
              >
                <fieldset
                  class="govuk-fieldset"
                  id="consequence-type"
                >
                  <legend
                    class="govuk-fieldset__legend govuk-!-padding-top-3"
                  >
                    <span
                      class="govuk-heading-s govuk-!-margin-bottom-0"
                    >
                      Select consequence type
                    </span>
                  </legend>
                  <div
                    class=""
                  >
                    <div
                      class="govuk-radios"
                      data-module="govuk-radios"
                    >
                      <div
                        class="govuk-radios__item govuk-!-margin-bottom-1"
                      >
                        <input
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-services-conditional"
                          id="consequence-type-services"
                          name="consequenceType"
                          type="radio"
                          value="services"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-services"
                        >
                          Services
                        </label>
                      </div>
                      <div
                        class="govuk-radios__item govuk-!-margin-bottom-1"
                      >
                        <input
                          checked=""
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-networkWide-conditional"
                          id="consequence-type-networkWide"
                          name="consequenceType"
                          type="radio"
                          value="networkWide"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-networkWide"
                        >
                          Network wide
                        </label>
                      </div>
                      <div
                        class="govuk-radios__item govuk-!-margin-bottom-1"
                      >
                        <input
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-operatorWide-conditional"
                          id="consequence-type-operatorWide"
                          name="consequenceType"
                          type="radio"
                          value="operatorWide"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-operatorWide"
                        >
                          Operator wide
                        </label>
                      </div>
                      <div
                        class="govuk-radios__item"
                      >
                        <input
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-stops-conditional"
                          id="consequence-type-stops"
                          name="consequenceType"
                          type="radio"
                          value="stops"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-stops"
                        >
                          Stops
                        </label>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
              <input
                name="disruptionId"
                type="hidden"
                value=""
              />
              <input
                name="consequenceIndex"
                type="hidden"
                value=""
              />
              <div
                class="govuk-button-group"
              >
                <button
                  class="govuk-button"
                  data-module="govuk-button"
                >
                  Save and continue
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`pages > CreateDisruption > should render correctly with no inputs and no errors 1`] = `
<DocumentFragment>
  <div
    class="app-phase-banner__wrapper"
  >
    <div
      class="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        class="govuk-phase-banner__content"
      >
        <strong
          class="govuk-tag govuk-phase-banner__content__tag"
        >
          Beta
        </strong>
        <span
          class="govuk-phase-banner__text"
        >
          This is a new service – your 
          <a
            class="govuk-link"
            href="/feedback"
            id="feedback-link"
          >
            feedback
          </a>
           will help us to improve it.
        </span>
      </p>
    </div>
  </div>
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-two-thirds"
        >
          <form
            action="/api/type-of-consequence"
            method="post"
          >
            <input
              name="csrf_token"
              type="hidden"
              value=""
            />
            <div
              class="govuk-form-group"
            >
              <h1
                class="govuk-heading-xl"
              >
                Add a consequence
              </h1>
              <div
                class="govuk-form-group"
              >
                <fieldset
                  class="govuk-fieldset"
                  id="consequence-type"
                >
                  <legend
                    class="govuk-fieldset__legend govuk-!-padding-top-3"
                  >
                    <span
                      class="govuk-heading-s govuk-!-margin-bottom-0"
                    >
                      Select consequence type
                    </span>
                  </legend>
                  <div
                    class=""
                  >
                    <div
                      class="govuk-radios"
                      data-module="govuk-radios"
                    >
                      <div
                        class="govuk-radios__item govuk-!-margin-bottom-1"
                      >
                        <input
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-services-conditional"
                          id="consequence-type-services"
                          name="consequenceType"
                          type="radio"
                          value="services"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-services"
                        >
                          Services
                        </label>
                      </div>
                      <div
                        class="govuk-radios__item govuk-!-margin-bottom-1"
                      >
                        <input
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-networkWide-conditional"
                          id="consequence-type-networkWide"
                          name="consequenceType"
                          type="radio"
                          value="networkWide"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-networkWide"
                        >
                          Network wide
                        </label>
                      </div>
                      <div
                        class="govuk-radios__item govuk-!-margin-bottom-1"
                      >
                        <input
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-operatorWide-conditional"
                          id="consequence-type-operatorWide"
                          name="consequenceType"
                          type="radio"
                          value="operatorWide"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-operatorWide"
                        >
                          Operator wide
                        </label>
                      </div>
                      <div
                        class="govuk-radios__item"
                      >
                        <input
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-stops-conditional"
                          id="consequence-type-stops"
                          name="consequenceType"
                          type="radio"
                          value="stops"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-stops"
                        >
                          Stops
                        </label>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
              <input
                name="disruptionId"
                type="hidden"
                value=""
              />
              <input
                name="consequenceIndex"
                type="hidden"
                value=""
              />
              <div
                class="govuk-button-group"
              >
                <button
                  class="govuk-button"
                  data-module="govuk-button"
                >
                  Save and continue
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`pages > CreateDisruption > should render correctly with query params 1`] = `
<DocumentFragment>
  <div
    class="app-phase-banner__wrapper"
  >
    <div
      class="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        class="govuk-phase-banner__content"
      >
        <strong
          class="govuk-tag govuk-phase-banner__content__tag"
        >
          Beta
        </strong>
        <span
          class="govuk-phase-banner__text"
        >
          This is a new service – your 
          <a
            class="govuk-link"
            href="/feedback"
            id="feedback-link"
          >
            feedback
          </a>
           will help us to improve it.
        </span>
      </p>
    </div>
  </div>
  <div
    class="govuk-width-container"
  >
    <button
      class="govuk-back-link mb-7"
      type="button"
    >
      Back
    </button>
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-two-thirds"
        >
          <form
            action="/api/type-of-consequence"
            method="post"
          >
            <input
              name="csrf_token"
              type="hidden"
              value=""
            />
            <div
              class="govuk-form-group"
            >
              <h1
                class="govuk-heading-xl"
              >
                Add a consequence
              </h1>
              <div
                class="govuk-form-group"
              >
                <fieldset
                  class="govuk-fieldset"
                  id="consequence-type"
                >
                  <legend
                    class="govuk-fieldset__legend govuk-!-padding-top-3"
                  >
                    <span
                      class="govuk-heading-s govuk-!-margin-bottom-0"
                    >
                      Select consequence type
                    </span>
                  </legend>
                  <div
                    class=""
                  >
                    <div
                      class="govuk-radios"
                      data-module="govuk-radios"
                    >
                      <div
                        class="govuk-radios__item govuk-!-margin-bottom-1"
                      >
                        <input
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-services-conditional"
                          id="consequence-type-services"
                          name="consequenceType"
                          type="radio"
                          value="services"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-services"
                        >
                          Services
                        </label>
                      </div>
                      <div
                        class="govuk-radios__item govuk-!-margin-bottom-1"
                      >
                        <input
                          checked=""
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-networkWide-conditional"
                          id="consequence-type-networkWide"
                          name="consequenceType"
                          type="radio"
                          value="networkWide"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-networkWide"
                        >
                          Network wide
                        </label>
                      </div>
                      <div
                        class="govuk-radios__item govuk-!-margin-bottom-1"
                      >
                        <input
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-operatorWide-conditional"
                          id="consequence-type-operatorWide"
                          name="consequenceType"
                          type="radio"
                          value="operatorWide"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-operatorWide"
                        >
                          Operator wide
                        </label>
                      </div>
                      <div
                        class="govuk-radios__item"
                      >
                        <input
                          class="govuk-radios__input"
                          data-aria-controls="consequence-type-stops-conditional"
                          id="consequence-type-stops"
                          name="consequenceType"
                          type="radio"
                          value="stops"
                        />
                        <label
                          class="govuk-label govuk-radios__label"
                          for="consequence-type-stops"
                        >
                          Stops
                        </label>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
              <input
                name="disruptionId"
                type="hidden"
                value=""
              />
              <input
                name="consequenceIndex"
                type="hidden"
                value=""
              />
              <div
                class="govuk-button-group"
              >
                <button
                  class="govuk-button"
                  data-module="govuk-button"
                >
                  Save and continue
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
